feat: Added buttons mute and unmute
